Fixed site cards stretch issue. There may still be a stretch issue with the contained image, but it is not very noticable.

--- a/src/app/sites/sites.component.css
+++ b/src/app/sites/sites.component.css
@@ -1,5 +1,4 @@
 mat-grid-tile {
-  background: lightblue;
   border-radius: 20px;
 }
 
